--- a/cdk-sandbox/src/app/components/navbar/navbar.component.html
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.html
@@ -5,6 +5,7 @@
       <ul class="nav__wrapper">
         <li class="nav__item"><a routerLink="/list">Componente 1</a></li>
         <li class="nav__item"><a href="#">Componente 2</a></li>
+        <li class="nav__item"><a href="#">Just a test</a></li>
       </ul>
     </nav>
   </div>
