--- a/cdk-sandbox/src/app/components/navbar/navbar.component.scss
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.scss
@@ -1,83 +1,100 @@
-/* 
-** The Header Media Queries **
-** Tweak as per your needs **
-*/
-.brand {
-  font-weight: bold;
-  font-size: 20px;
+.sidenav-header-div {
+  height: 400px;
+  width: 400px;
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  background-image: url(../../../assets/images/header-background.jpg);
+  background-size: 580px;
 }
 
-.site-header {
-  position: relative;
-  background-color: #def7ff;
-  padding-left: 25px;
-  padding-right: 25px;
-}
+.blob {
+  background: white;
+  border-radius: 50%;
+  margin: 10px;
+  height: 150px;
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  place-items: center;
 
-.site-header__wrapper {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-@media (min-width: 600px) {
-  .site-header__wrapper {
-    display: flex;
-    align-items: center;
-    padding-top: 0;
-    padding-bottom: 0;
-  }
-}
-.nav {
-  flex: 1;
-}
+  box-shadow: 0 0 0 0 rgba(3, 217, 255, 1);
+  transform: scale(1);
+  animation: pulse 2s infinite;
 
-@media (min-width: 600px) {
-  .nav__wrapper {
-    display: flex;
+  mat-icon {
+    height: 75px;
+    width: 75px;
+    font-size: 75px;
+    color: rgba(3, 217, 255, 1);
   }
 }
 
-@media (max-width: 599px) {
-  .nav__wrapper {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    left: 0;
-    z-index: -1;
-    background-color: #d9f0f7;
-    visibility: hidden;
-    opacity: 0;
-    transform: translateY(-100%);
-    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(3, 217, 255, 0.7);
   }
-  .nav__wrapper.active {
-    visibility: visible;
-    opacity: 1;
-    transform: translateY(0);
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 100px rgba(3, 217, 255, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(3, 217, 255, 0);
   }
 }
 
-.nav__item {
-    display: block;
-}
-.nav__item a {
-  display: block;
-  padding: 1.5rem 1rem;
+.example-container {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  border: 1px solid white
 }
 
-@media (min-width: 600px) {
-  .nav__item--end {
-    margin-left: auto;
+.example-sidenav-content {
+  background-color: white;
+  display: flex;
+  height: 100%;
+  // align-items: center;
+  // justify-content: center;
+}
+
+.header {
+  height: 60px;
+  width: 100%;
+  background-color: rgba(3, 217, 255, 0.3);
+  // background-image: url(../../../assets/images/header-background.jpg);;
+}
+
+.header-button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 80px;
+  background-color: rgba(3, 217, 255, 1);
+  box-shadow: black;
+  &.opened {
+    width: 30px;
+    mat-icon {
+      height: 30px;
+      width: 30px;
+      font-size: 30px;
+    }
+  }
+  mat-icon {
+    cursor: pointer;
+    height: 75px;
+    width: 75px;
+    font-size: 75px;
+    color: white;
   }
 }
 
-.nav__toggle {
-  display: none;
-}
-@media (max-width: 599px) {
-  .nav__toggle {
-    display: block;
-    position: absolute;
-    right: 1rem;
-    top: 1rem;
-  }
+.side-nav {
+  // height: 100%;
+  // background-color: white;
 }
