--- a/cdk-sandbox/src/app/components/navbar/navbar.component.html
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <mat-nav-list>
-      <a mat-list-item> Componente 1 </a>
+      <a mat-list-item routerLink="/list"> Componente 1 </a>
       <a mat-list-item> Componente 2 </a>
     </mat-nav-list>
   </mat-sidenav>
@@ -27,6 +27,7 @@
       >
         <mat-icon>{{ opened ? 'chevron_left' : 'chevron_right' }}</mat-icon>
     </div>
+    <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
