--- a/cdk-sandbox/src/app/components/navbar/navbar.component.scss
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.scss
@@ -66,7 +66,7 @@
   height: 60px;
   width: 100%;
   background-color: rgba(3, 217, 255, 0.3);
-  // background-image: url(../../../assets/images/header-background.jpg);;
+  background-image: url(../../../assets/images/header-background.jpg);
 }
 
 .header-button {
