--- a/cdk-sandbox/src/app/components/navbar/navbar.component.scss
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.scss
@@ -58,8 +58,10 @@
   background-color: white;
   display: flex;
   height: 100%;
-  // align-items: center;
-  // justify-content: center;
+  background-image: url(../../../assets/images/pattern.jpg);
+  background-repeat: repeat;
+  // opacity: 0;
+  // background-color: black;
 }
 
 .header {
