--- a/cdk-sandbox/src/app/components/navbar/navbar.component.html
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,19 @@
 <mat-sidenav-container class="example-container">
-  <mat-sidenav
-    #sidenav
-    mode="side"
-    [(opened)]="opened"
-    class="side-nav"
-  >
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="side-nav">
     <div class="sidenav-header-div">
       <div class="blob">
         <mat-icon>menu_book</mat-icon>
       </div>
     </div>
     <mat-nav-list>
-      <a mat-list-item routerLink="/list"> Componente 1 </a>
+      <a mat-list-item routerLink="/list" routerLinkActive="active">
+        Componente 1
+      </a>
       <a mat-list-item> Componente 2 </a>
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-sidenav-content>
+  <mat-sidenav-content class="sidenav-content">
     <div class="example-sidenav-content">
       <div
         type="button"
@@ -25,13 +22,15 @@
         mat-button
         (click)="sidenav.toggle(); opened = !opened"
       >
-        <mat-icon>{{ opened ? 'chevron_left' : 'chevron_right' }}</mat-icon>
-    </div>
-    <router-outlet></router-outlet>
+        <mat-icon>{{ opened ? "chevron_left" : "menu_book" }}</mat-icon>
+        <!-- <button mat-fab color="primary" aria-label="Example icon button with a delete icon">
+          <mat-icon>menu_book</mat-icon>
+        </button> -->
+      </div>
+      <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
 <!-- <header class="site-header">
   <div class="wrapper site-header__wrapper">
     <a href="#" class="brand">CDK Sandbox</a>
