Novo componente e ajustes no router

--- a/cdk-sandbox/src/app/components/navbar/navbar.component.html
+++ b/cdk-sandbox/src/app/components/navbar/navbar.component.html
@@ -6,10 +6,10 @@
       </div>
     </div>
     <mat-nav-list>
-      <a mat-list-item routerLink="/list" routerLinkActive="active">
-        Componente 1
+      <a mat-list-item routerLink=""> Home </a>
+      <a mat-list-item routerLink="commerce" routerLinkActive="active">
+        Commerce
       </a>
-      <a mat-list-item> Componente 2 </a>
     </mat-nav-list>
   </mat-sidenav>
 
