--- a/cdk-sandbox/src/app/components/home/home.component.html
+++ b/cdk-sandbox/src/app/components/home/home.component.html
@@ -11,19 +11,20 @@
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-title>Siberian Husky</mat-card-title>
         <mat-card-subtitle>Dog Breed</mat-card-subtitle>
       </mat-card-header>
       <img
         mat-card-image
-        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+        src="https://vetsmart-parsefiles.s3.amazonaws.com/caf81fb0af86586695b392e8ede53cf9_breed.jpg"
         alt="Photo of a Shiba Inu"
       />
       <mat-card-content>
         <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz
-          breeds of dog from Japan. A small, agile dog that copes very well with
-          mountainous terrain, the Shiba Inu was originally bred for hunting.
+          The Siberian Husky is a medium-sized working dog breed. The breed
+          belongs to the Spitz genetic family. It is recognizable by its thickly
+          furred double coat, erect triangular ears, and distinctive markings,
+          and is smaller than a very similar-looking dog, the Alaskan Malamute
         </p>
       </mat-card-content>
       <mat-card-actions>
