--- a/cdk-sandbox/src/app/components/home/home.component.scss
+++ b/cdk-sandbox/src/app/components/home/home.component.scss
@@ -9,7 +9,7 @@
 
 
 .example-header-image {
-  background-image: url("https://material.angular.io/assets/img/examples/shiba1.jpg");
+  background-image: url("https://p4u4d3s4.stackpathcdn.com/wp-content/uploads/2019/01/husky-close-up.jpg");
   background-size: cover;
 }
 
